build(pom): 构建调整